--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	</head>
+	<head></head>
 	<body>
-		<title>Hello, World!</title>
+		<a href="/login">Login</a>
 	</body>
 </html>
