--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="styles/styles.css">
+	</head>
 	<body>
 		<a href="/login">Login</a>
 	</body>
