--- a/login.html
+++ b/login.html
@@ -3,14 +3,17 @@
 	<head>
 		<title>Pro Team Manager</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="styles/styles.css">
 	</head>
 	<body>
-		<label for="email">Email</label>
-		<input type="email" id="email">
-		<br>
-		<label for="password">Password</label>
-		<input type="password" id="password">
-		<a href="/login/recover">Forgot your password?</a>
-		<input type="submit" value="submit">
+		<form class="login">
+			<label for="email">Email</label>
+			<input type="email" id="email">
+			<br>
+			<label for="password">Password</label>
+			<input type="password" id="password">
+			<a href="/login/recover">Forgot your password?</a>
+			<input type="submit" value="submit">
+			</form>
 	</body>
 </html>
