fix google login

--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 		<title>Pro Team Manager</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="styles/styles.css">
+		<meta name="google-signin-client_id" content="660059282504-65roq7133jtlfktcsq    1eirbv4jbhkckl.apps.googleusercontent.com">
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 	</head>
 	<body>
-		<meta name="google-signin-client_id" content="https://660059282504-65roq7133jtlfktcsq1eirbv4jbhkckl.apps.googleusercontent.com">
 		<div class="g-signin2" data-onsuccess="onSignIn"></div>
 		<script>
 			function onSignIn(googleUser) {
